# balagan-agent

./: .env.example  .gitignore  CREWAI_INTEGRATION_GUIDE.md  CREWAI_QUICKREF.md  README.md  mkdocs.yml  pyproject.toml
.github/: FUNDING.yml  markdown-link-check-config.json
.github/workflows/: pages.yml  pr-check.yml  publish.yml  release.yml  test.yml
agentchaos/: __init__.py  cli.py  engine.py  experiment.py  reporting.py  runner.py  verbose.py  wrapper.py
agentchaos/injectors/: __init__.py  base.py  budget.py  context.py  delay.py  hallucination.py  tool_failure.py
agentchaos/metrics/: __init__.py  collector.py  mttr.py  recovery.py  reliability.py
agentchaos/wrappers/: __init__.py  autogen.py  crewai.py  langchain.py
balaganagent/: __init__.py  engine.py  reporting.py  runner.py  verbose.py  wrapper.py
balaganagent/hooks/: chaos_hooks.py
balaganagent/injectors/: base.py  budget.py  context.py  hallucination.py  tool_failure.py
balaganagent/metrics/: collector.py  recovery.py  reliability.py
balaganagent/wrappers/: __init__.py  autogen.py  claude_sdk.py  claude_sdk_client.py  crewai.py  langchain.py  langgraph.py
docs/: cli.md  examples.md  faq.md  how-it-works.md  index.md  integrations.md  roadmap.md
docs/assets/: PH_LAUNCH_CHECKLIST.md
examples/: GEMINI_SETUP.md  README.md  README_BALAGAN_RESEARCH_AGENT.md  basic_usage.py  chaos_research_agent_example.py  claude_sdk_agent.py  claude_sdk_chaos_example.py  crewai_gemini_chaos_example.py  crewai_gemini_research_agent.py  crewai_gemini_research_agent_diagrams.md  crewai_sdk_research_agent.py  langgraph_agent.py  meeting_notes_agent.py  stress_test.py  validate_gemini_key.py
ph-assets/: package-lock.json  package.json
ph-assets/src/: DemoVideo.tsx  GallerySlide.tsx  Root.tsx  Thumbnail.tsx  theme.ts
reports/: report_AI_safety.md  report_machine_learning.md  report_quantum_computing.md
tests/: __init__.py  test_autogen_wrapper.py  test_chaos_hooks.py  test_claude_sdk_research_agent.py  test_claude_sdk_wrapper.py  test_crewai_gemini_agent.py  test_crewai_sdk_agent.py  test_crewai_sdk_stress.py  test_crewai_wrapper.py  test_engine.py  test_injectors.py  test_langchain_wrapper.py  test_langgraph_wrapper.py  test_meeting_notes_agent.py  test_meeting_notes_stress.py  test_metrics.py
tests/bdd/: test_autogen_bdd.py  test_crewai_bdd.py  test_langchain_bdd.py
tests/e2e/: test_autogen_e2e.py  test_crewai_e2e.py  test_langchain_e2e.py  (+1 more)
